Notificaciones de postulacion
Avisa cuando el estado de la postulacion cambia, faltaria agregar mas informacion en el correo como por ejemplo el nombre de la practica, previsto para despues :)
