# docs/swagger.yaml
@@ -65,6 +65,19 @@ definitions:
     - nombres
     - password
     type: object
+  auth.RegisterRequest_admin:
+    properties:
+      Email_admin:
+        type: string
+      Nombre_admin:
+        type: string
+      password:
+        type: string
+    required:
+    - Email_admin
+    - Nombre_admin
+    - password
+    type: object
   auth.RegisterRequest_empresa:
     properties:
       Email_empresa:
@@ -85,6 +98,13 @@ definitions:
       message:
         type: string
     type: object
+  auth.RegisterResponse_admin:
+    properties:
+      firebase_uid:
+        type: string
+      message:
+        type: string
+    type: object
   auth.RegisterResponse_empresa:
     properties:
       firebase_uid:
@@ -97,9 +117,32 @@ definitions:
       message:
         type: string
     type: object
+  database.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
+  /check-postulaciones:
+    get:
+      description: Verifica cambios en la tabla de postulaciones y envía correos electrónicos
+        si hay cambios
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Verificación completada
+          schema:
+            type: string
+        "500":
+          description: Error al verificar cambios
+          schema:
+            $ref: '#/definitions/database.ErrorResponse'
+      summary: Verificar cambios en la tabla de postulaciones
+      tags:
+      - postulaciones
   /complete-profile:
     post:
       consumes:
@@ -263,6 +306,37 @@ paths:
       summary: Registra un nuevo usuario
       tags:
       - auth
+  /register_admin:
+    post:
+      consumes:
+      - application/json
+      description: Crea un nuevo usuario en Firebase y lo guarda en la base de datos
+        local
+      parameters:
+      - description: Datos del usuario a registrar
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/auth.RegisterRequest_admin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Usuario registrado correctamente
+          schema:
+            $ref: '#/definitions/auth.RegisterResponse_admin'
+        "400":
+          description: Solicitud inválida
+          schema:
+            $ref: '#/definitions/auth.RegisterResponse_admin'
+        "500":
+          description: Error interno del servidor
+          schema:
+            $ref: '#/definitions/auth.RegisterResponse_admin'
+      summary: Registra un nuevo usuario
+      tags:
+      - auth
   /register_empresa:
     post:
       consumes:
@@ -328,6 +402,40 @@ paths:
       summary: Reenviar correo de verificación
       tags:
       - verification
+  /sendemail:
+    post:
+      consumes:
+      - application/json
+      description: Sends an email to the user with the updated status of their application
+      parameters:
+      - description: Recipient email address
+        in: query
+        name: to
+        required: true
+        type: string
+      - description: Application status
+        in: query
+        name: estadoPostulacion
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Email sent successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Send an email notification
+      tags:
+      - email
   /upload-image:
     post:
       consumes:
